# talk48

./: README.md  pyproject.toml  template.env
src/talk48/: __init__.py  __main__.py  hello.css
