[tool.poetry]
name = "talk48"
version = "0.1.0"
description = ""
authors = ["Paul Anton Letnes <does@not.exist>"]
readme = "README.md"
packages = [{ include = "talk48", from = "src" }]

[tool.poetry.scripts]
greet = "greet.location:cli"
talk48 = "talk48:main"

[tool.poetry.dependencies]
python = "^3.11"
textual = "^0.27.0"
openai = "^0.27.7"
python-dotenv = "^1.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
black = "^24.3.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

